kubernetes/flux-manifests/cluster-2/default/nginx/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`nginx.srv-k3s.server.io`)
    services:
    - kind: Service
      name: nginx
      port: 80
  tls:
    secretName: nginx-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-redirect
  namespace: default
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`nginx.srv-k3s.server.io`)
    middlewares:
    - name: redirect-to-https
    services:
    - kind: Service
      name: nginx
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
